--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <h1>¡Bienvenido a mi sitio con Power BI!</h1>
     
     <!-- Incrustar reporte de Power BI -->
-    <iframe width="800" height="600" src="https://app.powerbi.com/view?r=..." frameborder="0" allowFullScreen="true"></iframe>
+    <iframe title="Renovaciones Template" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=cdac5301-def3-43ca-99b1-dbb04d83baf3&autoAuth=true&ctid=5f3ead27-3a41-4763-bd70-d579e191ab4a" frameborder="0" allowFullScreen="true"></iframe>
     
 </body>
 </html>
